--- a/grid.css
+++ b/grid.css
@@ -1,6 +1,38 @@
 .container {
     display: grid;
-    grid-template-columns: 10rem auto 10rem;
-    grid-template-rows: 5rem 5rem;
-    gap: .5rem;
-}   
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 5rem 5rem 5rem auto 5rem;
+    /* gap: .3rem */
+}
+
+.column {
+    /* min-width: fit-content; */
+}
+
+.column-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+}
+
+.column-2 {
+    grid-column: 2 / 4;
+    grid-row: 2 / 4;
+}
+
+.column-3 {
+    grid-column: 4 / -1;
+    grid-row: 2 / -1;
+}
+
+.column-4 {
+    grid-column: 2 / -1;
+}
+
+.column-5 {
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
+}
+
+.column-6 {
+    grid-column: 2 / 4;
+}
