--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 }
 
 .container {
-    width: 55rem;
+    width: 100%;
+    height: 100vh;
     margin: 0 auto;
     background-color: khaki;
     padding: 3rem 2rem;
@@ -22,8 +23,31 @@ body {
 
 .column {
     text-align: center;
-    background-color: maroon;
     padding: 1rem;
     color: white;
     font-weight: 700;
+}
+
+.column-1 {
+    background-color: blueviolet;
+}
+
+.column-2 {
+    background-color: burlywood;
+}
+
+.column-3 {
+    background-color: coral;
+}
+
+.column-4 {
+    background-color: darkcyan;
+}
+
+.column-5 {
+    background-color: darkslateblue;
+}
+
+.column-6 {
+    background-color: firebrick;
 }
