--- a/grid.css
+++ b/grid.css
@@ -3,6 +3,12 @@
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 5rem 5rem 5rem auto 5rem;
     /* gap: .3rem */
+    grid-template-areas: 
+    "b n n n n n n n n n n n"
+    "b p p c c c c c c c c c"
+    "b p p c c c c c c c c c"
+    "b s s c c c c c c c c c"
+    "b f f c c c c c c c c c";
 }
 
 .column {
@@ -10,29 +16,35 @@
 }
 
 .column-1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / -1;
+    /* grid-column: 1 / 2;
+    grid-row: 1 / -1; */
+    grid-area: b;
 }
 
 .column-2 {
-    grid-column: 2 / 4;
-    grid-row: 2 / 4;
+    /* grid-column: 2 / 4;
+    grid-row: 2 / 4; */
+    grid-area: n;
 }
 
 .column-3 {
-    grid-column: 4 / -1;
-    grid-row: 2 / -1;
+    /* grid-column: 4 / -1;
+    grid-row: 2 / -1; */
+    grid-area: p;
 }
 
 .column-4 {
-    grid-column: 2 / -1;
+    /* grid-column: 2 / -1; */
+    grid-area: c;
 }
 
 .column-5 {
-    grid-column: 2 / 4;
-    grid-row: 4 / 5;
+    /* grid-column: 2 / 4;
+    grid-row: 4 / 5; */
+    grid-area: s;
 }
 
 .column-6 {
-    grid-column: 2 / 4;
+    /* grid-column: 2 / 4; */
+    grid-area: f;
 }
