--- a/grid.css
+++ b/grid.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(20rem,1fr));
+    grid-auto-rows: 10rem;
     gap: .3rem;
 }
 
