--- a/style.css
+++ b/style.css
@@ -15,39 +15,8 @@ body {
 
 .container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto;
     background-color: khaki;
     padding: 3rem 2rem;
-}
-
-.column {
-    text-align: center;
-    padding: 1rem;
-    color: white;
-    font-weight: 700;
-}
-
-.column-1 {
-    background-color: blueviolet;
-}
-
-.column-2 {
-    background-color: burlywood;
-}
-
-.column-3 {
-    background-color: coral;
-}
-
-.column-4 {
-    background-color: darkcyan;
-}
-
-.column-5 {
-    background-color: darkslateblue;
-}
-
-.column-6 {
-    background-color: firebrick;
 }
