--- a/grid.css
+++ b/grid.css
@@ -1,50 +1,31 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 5rem 5rem 5rem auto 5rem;
-    /* gap: .3rem */
-    grid-template-areas: 
-    "b n n n n n n n n n n n"
-    "b p p c c c c c c c c c"
-    "b p p c c c c c c c c c"
-    "b s s c c c c c c c c c"
-    "b f f c c c c c c c c c";
+    grid-template-columns: [main-start] minmax(10rem, 1fr) [content-start] minmax(10rem, 5fr) [content-end main-end];
+    grid-template-rows: [main-start] 5rem [profile-start content-start] 5rem 5rem [profile-end] auto [content-end] 5rem [main-end];
+
 }
 
-.column {
-    /* min-width: fit-content; */
-}
+.column {}
 
 .column-1 {
-    /* grid-column: 1 / 2;
-    grid-row: 1 / -1; */
-    grid-area: b;
+    grid-column: main;
 }
 
 .column-2 {
-    /* grid-column: 2 / 4;
-    grid-row: 2 / 4; */
-    grid-area: n;
+    grid-column: main-start / content-start;
+    grid-row: profile-start / profile-end;
 }
 
 .column-3 {
-    /* grid-column: 4 / -1;
-    grid-row: 2 / -1; */
-    grid-area: p;
+    /* grid-column: content;
+    grid-row: content; */
+    grid-area: content;
 }
 
-.column-4 {
-    /* grid-column: 2 / -1; */
-    grid-area: c;
-}
+.column-4 {}
 
-.column-5 {
-    /* grid-column: 2 / 4;
-    grid-row: 4 / 5; */
-    grid-area: s;
-}
+.column-5 {}
 
 .column-6 {
-    /* grid-column: 2 / 4; */
-    grid-area: f;
+    grid-column: main;
 }
