--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ html {
 body {
     font-size: 1.6rem;
     font-family: 'Poppins', sans-serif;
+    background-color: khaki;
+    height: 100vh;
+    padding: 3rem 2rem;
 }
 
 .container {
-    width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto;
-    background-color: khaki;
-    padding: 3rem 2rem;
 }
 
 .column {
